@@ -1,3 +1,8 @@
+2025-07-24  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-smb.el: Disable setting connection-local variables.
+	(Bug#78886)
+
 2025-07-23  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (with-tramp-local-environment): New defmacro.
